Fixes type on home page

--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1>Starter Template using Go and Bootstrapate</h1>
+        <h1>Starter Template using Go and Bootstrap</h1>
       </div>
 
     </main><!-- /.container -->
